# CliCoTea

./: CITATION.cff  README.md  pyproject.toml
configs/: config_bert_mbert.json
scripts/alignment/: run_token_alignment.py  token_alignment_flickr30k.sh  token_alignment_nlvr2.sh  token_alignment_snli.sh
scripts/datasets/: download_datasets.sh  prepare_flickr30k.sh  prepare_nlvr2.sh  prepare_snli.sh  translate.py
scripts/embeddings/: train_clicotea.py  train_clicotea.sh
scripts/zero-shot/: download_datasets.sh  evaluate.py  zeroshot_retrieval.sh  zeroshot_ve.sh  zeroshot_vr.sh
src/clicotea/: engine.py  metrics.py  model.py  options.py  solver.py  trainer.py  utils.py
src/clicotea/data/: __init__.py  prepare_dataset.py  retrieval_dataset.py  token_alignment_dataset.py  utils.py  ve_dataset.py  vr_dataset.py
tests/: conftest.py  test_get_token_pairs.py  test_irtr_dataset.py  test_token_alignment_dataset.py  test_ve_dataset.py  test_vr_dataset.py
